Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
    },
    "outputs": [],
    "source": [
-    "if \"art.vandelay@vandelay.co\" # False"
+    "\"art.vandelay@vandelay.co\" # False"
    ]
   },
   {
